<resources>
    <string name="app_name">Recipe Matcher</string>

    <string name="welcome">Recipe Matcher</string>
    <string name="email_hint">Email </string>

    <string name="logout">logout</string>
    <string name="user">user</string>

    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>

    <string name="upload_a_recipe">Upload recipe</string>
    <string name="password_hint">Password</string>
    <string name="login_text">Sign In</string>
    <string name="create_account_text">Create An Account</string>
    <string name="name_text">Name</string>
    <string name="signup_button_text">Sign Up</string>
    <string name="login_prompt">Already have an account?</string>
    <string name="upload_txt">Upload</string>
    <string name="search_txt">Search</string>
    <string name="hungry_text">Search</string>
    <string name="pasta_txt">Pasta</string>
    <string name="asian_txt">Asian</string>
    <string name="main_txt">Main</string>
    <string name="dessert_txt">Dessert</string>
    <string name="hot_txt">Hot</string>
    <string name="cold_txt">Cold</string>
    <string name="recipe_uploaded">Recipe List</string>
    <string name="favourites">Favourites</string>
    <string name="host_txt">Hosting</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Upload Recipe Activity-->
    <string name="recipe_name">Recipe Name</string>
    <string name="upload_dish_text">Upload a photo of your dish!</string>
    <string name="select_photo">Select photo</string>
    <string name="recipe_ingredients">Ingredients:</string>
    <string name="step_1">Step 1:</string>
    <string name="recipe_instructions">Instruction details</string>
    <string name="add_step">add step</string>
    <string name="upload_button_text">Upload</string>
    <string name="category_tv">Category</string>
    <string name="category_prompt">Choose a Category</string>
    <string name="save_txt">save</string>
    <string name="video_txt">Tutorials</string>
    <string name="send_txt">Send</string>
    <string name="rating_text">"Rating: "</string>
    <string name="steps">Steps</string>
    <string name="ingredients_txt">Ingredients</string>
    <string name="rating_txt">Rating</string>
    <string name="cancel_txt">cancel</string>
    <string name="login_user">You must login first!</string>

    <!-- UploadedRecipes activity -->
    <string name="no_recipes_text">You Haven\'t Uploaded Any Recipes</string>
    <string name="delete_upload_btn_txt">Delete</string>
    <string name="edit">Edit</string>

    <!-- FavouritedRecipes activity -->
    <string name="no_favs_text">You Haven\'t Favourited Any Recipes</string>
    <string name="remove_fav_btn_txt">Remove</string>


    <string-array name="category_array">
        <item>Pasta</item>
        <item>Asian</item>
        <item>Main</item>
        <item>Dessert</item>
        <item>Hot</item>
        <item>Cold</item>
    </string-array>

    <!-- View Recipe Activity -->
    <string name="favourite_button_text">Add to Favourites</string>
    <string name="ingredients">Ingredient 1:</string>
    <string name="ingredients_hint">Enter Ingredient Here</string>
    <string name="recipe_steps">Recipe Steps:</string>
    <string name="no_ratings_text">No Ratings Yet</string>
    <string name="swipe_instructions">Recipe Swipe:</string>
    <string name="instruction_left">Left: Previous Recipe</string>
    <string name="instruction_up">Up: Display Recipe</string>
    <string name="instruction_right">Right: Next Recipe</string>
    <string name="add_ingredient">Add ingredient</string>


</resources>