<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/recipe_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".UploadRecipeActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/upload_recipe_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/recipe_name" />

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <TableRow android:id="@+id/recipe_category_table">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/category_tv"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/category_spinner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:entries="@array/category_array"
                    android:prompt="@string/category_prompt"
                    android:spinnerMode="dialog"
                    android:textAlignment="center" />
            </TableRow>
        </TableLayout>



        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/upload_dish_text" />

        <ImageView
            android:id="@+id/viewImage"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/placeholder" />

        <Button
            android:id="@+id/btnSelectPhoto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_photo" />
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFCD82">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#FFCD82"
            android:orientation="vertical"
            android:padding="10dp">

            <TableLayout
                android:id="@+id/recipe_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ingredients" />

                    <EditText
                        android:id="@+id/upload_recipe_ingredients_et"
                        android:layout_width="match_parent"
                        android:hint="@string/ingredients_hint" />
                </TableRow>
            </TableLayout>

            <TableLayout
                android:id="@+id/recipe_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/step_1" />

                    <EditText
                        android:id="@+id/upload_recipe_step1_et"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:hint="@string/recipe_instructions" />
                </TableRow>

            </TableLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onAddStepClick"
                android:text="@string/add_step" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:onClick="onAddIngredientClick"
                android:text="@string/add_ingredient" />

            <Button
                android:id="@+id/btnUpload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/upload_button_text" />
        </LinearLayout>

    </ScrollView>

</LinearLayout>