<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".SearchActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar" />

    <com.airbnb.lottie.LottieAnimationView
        android:layout_width="140dp"
        android:layout_height="130dp"
        android:elevation="4dp"
        app:lottie_rawRes="@raw/cooking"
        android:layout_gravity="center_horizontal"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/edit_Search"
            android:layout_width="0dp"
            android:layout_weight="1.5"
            android:layout_height="40dp"
            android:ems="10"
            android:hint="@string/hungry_text"
            android:inputType="textLongMessage"
            android:drawableStart="@drawable/ic_search"
            android:drawablePadding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input_field"
            android:textColorHint="@color/dark_grey"
            android:autofillHints="" />

        <Button
            android:id="@+id/search_btn"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="40dp"
            android:text="@string/send_txt"
            android:onClick="onSearchClick"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="@string/category_tv"/>

        <Button
            android:id="@+id/pasta_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/pasta_txt"
            android:onClick="onPastaClick"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/asian_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/asian_txt"
            android:onClick="onAsianClick"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/main_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/main_txt"
            android:onClick="onMainClick"
            android:textAllCaps="false"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dessert_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/dessert_txt"
            android:onClick="onDessertClick"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/hot_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/hot_txt"
            android:onClick="onHotClick"
            android:textAllCaps="false"/>
        <Button
            android:id="@+id/cold_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="40dp"
            android:text="@string/main_txt"
            android:onClick="onColdClick"
            android:textAllCaps="false"/>

    </LinearLayout>

    <ListView
        android:id="@+id/searchList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:padding="10dp"
        android:layout_margin="10dp"
        android:text=""/>

</LinearLayout>

</ScrollView>