<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/pagebackground"
    tools:context=".RegisterActivity">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:text="@string/create_account_text"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:textAlignment="center"
            android:textSize="34sp"
            android:textColor="@color/white"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editName"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:ems="10"
            android:hint="@string/name_text"
            android:inputType="textPersonName"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input_field"
            android:textColorHint="@color/teal_700" />

        <EditText
            android:id="@+id/editEmail"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:ems="10"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input_field"
            app:layout_constraintEnd_toEndOf="parent"
            android:textColorHint="@color/teal_700" />

        <EditText
            android:id="@+id/editPassword"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:layout_marginStart="70dp"
            android:layout_marginEnd="70dp"
            android:ems="10"
            android:hint="@string/password_hint"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawablePadding="10dp"
            android:paddingStart="12dp"
            android:paddingEnd="12dp"
            android:background="@drawable/custom_input_field"
            android:textColorHint="@color/teal_700" />

        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:text="@string/signup_button_text"
            android:textColor="@color/white"
            android:background="@drawable/custom_button" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.25"
            android:text="@string/login_prompt"
            android:textColor="@color/white"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:layout_marginStart="90dp"
            android:textAlignment="center" />

        <TextView
            android:id="@+id/tvLogin"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="10dp"
            android:text="@string/login_text"
            android:textColor="@color/teal_200"
            android:textStyle="bold"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:minWidth="250dp"
        android:max="100"
        android:indeterminate="true"
        android:visibility="invisible"
        android:layout_gravity="center"
        android:progress="1" />

</LinearLayout>
