<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scaleType="centerCrop"
    android:fillViewport="true"
    tools:context=".LandingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/pagebackground"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="130dp"
            android:layout_height="130dp"
            android:elevation="4dp"
            app:lottie_rawRes="@raw/food_logo"
            android:layout_marginTop="60dp"
            android:layout_gravity="center"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:shadowColor="@color/black"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="2"
            android:text="@string/app_name"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editEmail"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="50dp"
                android:autofillHints=""
                android:background="@drawable/custom_input_field"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/email_hint"
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginStart="50dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="50dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/password_hint"
                android:drawableStart="@drawable/ic_lock"
                android:drawablePadding="10dp"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:background="@drawable/custom_input_field"
                android:inputType="textPassword"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"/>

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="50dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/custom_button"
                android:text="@string/login_text"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/create_account_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="80dp"
                android:layout_marginTop="15dp"
                android:layout_marginEnd="80dp"
                android:background="@drawable/custom_button"
                android:onClick="onCreateAccountClick"
                android:text="@string/create_account_text"
                app:layout_constraintEnd_toEndOf="parent"
                android:textColor="@color/white" />

        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="center|bottom"
            android:layout_marginBottom="20dp"
            android:visibility="gone" />


    </LinearLayout>

</ScrollView>